[package]
name = "rocky"
description = "Lite WebFramework for rust"
version = "0.2.3"
authors = ["Chen Gang <yikuyiku.com@gmail.com>"]
homepage = "http://www.rockyonrust.com"
repository = "https://github.com/chengang/rocky"
readme = "README.md"
documentation = "http://doc.rockyonrust.com"
license = "MIT"
keywords = ["WebFramework", "Router", "WebTemplate"]

[dependencies]
threadpool = "~0.1.4"
time = "~0.1.26"
url = "~0.2.35"
redis = "~0.3.1"
